Creado mediante Colaboratory

--- a/First_model_PCA_EFA.ipynb
+++ b/First_model_PCA_EFA.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOR0sW4DkZMVCyQLJWn+HdN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +26,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Hello, this is the first notebook in google colab related to my research with multivariate statistical methods. \n",
+        "\n",
+        "This book is the first of two. Here I will explore the structure of a numerical data to identify how it behaves. "
+      ],
+      "metadata": {
+        "id": "C1lTjm1kPDDV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1M8Wrd50Zyfr"
+      },
+      "source": [
+        "## Preparing the enviroment\n",
+        "\n",
+        "The present database is the result of a survey. In total 821 participants all over the Colombian territory participated. \n",
+        "\n",
+        "The topic is \"the perceived value that the client identifies in some dark tourism packages.\" \n",
+        "\n",
+        "Based on that, the objective of the present process was to research the theoric structure that fits better with the database and the client's point of view.  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this study, the authors aim to identify the theoretical structure that best fits the data by conducting a PCA/Exploratory factor analysis. It is worth noting that this research is based on Cho & Yang's (2016) study. Once the exploratory analysis is completed, more than three different confirmatory factor analyses will be conducted in the second part of the study.\n",
+        "\n",
+        "In the third part of the study, the authors will examine the covariation between different variables, such as the intention to buy a product and its perceived value. They will also investigate whether the theoretical structure is variable or invariable for each sex or age group in the sample. To achieve this, a structural equation model will be employed.\n",
+        "\n",
+        "After this process, an invariance analysis will be conducted to determine if there are any differences between the perception of value across age and sex groups. Finally, the authors will upload the database for further analysis.\n",
+        "\n",
+        "Enjoy it!"
+      ],
+      "metadata": {
+        "id": "sdjkjmurhooU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install semopy"
@@ -38,7 +78,7 @@
         "id": "w75nf1zp87C_",
         "outputId": "0618b415-7c24-42c1-bd92-38dd257465d9"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,36 +174,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1M8Wrd50Zyfr"
-      },
-      "source": [
-        "## Preparing the enviroment\n",
-        "\n",
-        "The present database is the result of a survey. in total 821 participants all over the Colombian territory \n",
-        "\n",
-        "The topic is \"perceived value that the client identifies in some dark tourism packages.\" \n",
-        "\n",
-        "Based on that, the objective of the present process was to research the theoric structure that fits better with the database and the client's point of view.  "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "In this order of ideas, the document will cover different stages. First of all, the atoms will proceed with a PCA/Exploratory factor analysis. \n",
-        "\n",
-        "It is important to mention that, the author wants to confirm between 3 different theoric structures, which is the one that fits better with the data. This is based on Cho & Yang. (2018) document.  Based on the abovementioned, structural equation modeling (SEM) is conducted in the second aspect. \n",
-        "\n",
-        "Once this process was conducted, an invariance analysis in order to understand if there were any differences between sex groups in the perception of the value. \n",
-        "\n",
-        "In this order of ideas, i will proceed to upload the database."
-      ],
-      "metadata": {
-        "id": "sdjkjmurhooU"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -183,7 +193,7 @@
       "metadata": {
         "id": "qVHtyCTezV05"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,7 +209,7 @@
         "id": "hfDalGpvzmdN",
         "outputId": "392a20e8-01fc-4a4c-cb5c-f16a6a607cd3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,6 +219,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The data is structured using a Likert scale ranging from 1 to 7, with seven levels of agreement."
+      ],
+      "metadata": {
+        "id": "VXOgf3BlS9HQ"
+      }
     },
     {
       "cell_type": "code",
@@ -224,7 +243,7 @@
         "id": "8ClLpMZeh5AA",
         "outputId": "e692b463-0cb3-4dd3-ad88-591a7f04c27d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +504,7 @@
         "id": "9zK5yYmTmf3p",
         "outputId": "0558947f-365a-437c-cdf1-70532c12100b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +619,7 @@
         "id": "HIBjex6omv6D",
         "outputId": "6a808085-e521-41bb-a678-fb6c93e57ee2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -810,7 +829,7 @@
         "id": "bPKiHViBm4XL",
         "outputId": "67f31c90-b49e-45f4-9f39-59d0d140108c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2142,7 +2161,7 @@
         "id": "5_OkRZCYn3dD",
         "outputId": "41ff27e2-8943-4bec-8ecf-f750ae4f63a3"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2980,7 +2999,7 @@
       "metadata": {
         "id": "5MLPaKQgoAAB"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3014,7 +3033,7 @@
       "metadata": {
         "id": "Qz0Bz20BoMYq"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3044,7 +3063,7 @@
         "id": "xrN7M3TroScZ",
         "outputId": "895c5686-6c4c-415c-ee58-fa7aa7ea27d1"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3558,7 +3577,7 @@
         "id": "1BCKPNFjoqD6",
         "outputId": "ded005c2-5177-4402-9979-c0d809557434"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
